FIX spacing print

--- a/src/styles/spacing.module.pcss
+++ b/src/styles/spacing.module.pcss
@@ -39,7 +39,7 @@
 }
 .mt-sidebar-first {
   @apply max-sm:mt-4 sm:mt-[3.5rem] md:mt-[4.5rem] lg:mt-[6rem];
-  @apply print:max-sm:!mt-[4.5rem];
+  @apply print:max-sm:!mt-[4.25rem];
 }
 .ml {
   @apply ml-4 md:ml-6 lg:ml-10;
